syntax = "proto3";

import "sensr_proto/global_type.proto";

package sensr_proto;

option cc_enable_arenas = true;

enum LabelType {
  LABEL_CAR = 0;
  LABEL_PEDESTRIAN = 1;
  LABEL_CYCLIST = 2;
  LABEL_MISC = 3;
  LABEL_GROUND = 4;
  LABEL_MAX = 5;
}

enum ZoneEventType {
  ZONE_EVENT_NONE = 0;
  ZONE_EVENT_ENTRY = 1;
  ZONE_EVENT_EXIT = 2;
  ZONE_EVENT_LOITERING = 3;
  ZONE_EVENT_VELOCITY = 4;
}

message BoundingBox {
  Vector3 position = 1;
  Vector3 size = 2;
  float yaw = 3;
}

message PolygonBox {
  repeated Vector2 points = 1;
  float min_z = 2;
  float max_z = 3;
}
